Add metatags, og previews

--- a/index.html
+++ b/index.html
@@ -2,9 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>zwift-generative-workout</title>
+
+    <title>ZWO Generator - AI-Powered Zwift Workout Creator</title>
+    <meta name="description" content="Generate custom Zwift workouts using AI. Describe your workout in plain English, edit visually, and export to ZWO format." />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://veelenga.github.io/zwo-generator/" />
+    <meta property="og:title" content="ZWO Generator - AI-Powered Zwift Workout Creator" />
+    <meta property="og:description" content="Generate custom Zwift workouts using AI. Describe your workout in plain English, edit visually, and export to ZWO format." />
+    <meta property="og:image" content="https://veelenga.github.io/zwo-generator/og-image.png" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="ZWO Generator - AI-Powered Zwift Workout Creator" />
+    <meta name="twitter:description" content="Generate custom Zwift workouts using AI. Describe your workout in plain English, edit visually, and export to ZWO format." />
+    <meta name="twitter:image" content="https://veelenga.github.io/zwo-generator/og-image.png" />
+
+    <!-- Theme -->
+    <meta name="theme-color" content="#f97316" />
   </head>
   <body>
     <div id="root"></div>
